cambio tabla materias primas- parte 1

--- a/gg.html
+++ b/gg.html
@@ -21,14 +21,14 @@
 
         <!-- Contenido principal -->
         <main class="main-content">
-            <h1>Pedidos de Materia Prima</h1>
+            <h1>Pedidos de Materiales</h1>
 
             <!-- Sección Crear Pedido -->
             <div id="pedidoMP" class="seccion" style="display:none;">
                 <form id="pedidoForm">
                     <div class="form-group">
-                        <label for="materiaSelect">Materia Prima:</label>
-                        <select id="materiaSelect" required>
+                        <label for="materialSelect">Material:</label>
+                        <select id="materialSelect" required>
                             <option value="">Seleccione...</option>
                         </select>
                     </div>
@@ -36,7 +36,7 @@
                     <div class="form-group">
                         <label for="proveedorSelect">Proveedor:</label>
                         <select id="proveedorSelect" required>
-                            <option value="">Seleccione una materia primero</option>
+                            <option value="">Seleccione un material primero</option>
                         </select>
                     </div>
 
@@ -60,7 +60,7 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>Materia Prima</th>
+                                <th>Material</th>
                                 <th>Proveedor</th>
                                 <th>Cantidad</th>
                                 <th>Estado</th>
