--- a/admin-users.html
+++ b/admin-users.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel de Administrador</title>
   <link rel="stylesheet" href="css/admin-users.css">
+  <style>
+    /* Estilos básicos del modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center; align-items: center;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      width: 400px;
+    }
+    .modal-content input, 
+    .modal-content select {
+      width: 100%;
+      padding: 8px;
+      margin: 8px 0;
+    }
+  </style>
 </head>
 <body>
   <!-- Sidebar -->
@@ -14,7 +38,6 @@
       <li><button onclick="mostrarSeccion('usuarios')">Gestión de Empleados</button></li>
       <li><button onclick="mostrarSeccion('accesos')">Historial de Accesos</button></li>
     </ul>
-
     <button class="btn-logout" onclick="window.location.href='index.html'">Cerrar sesión</button>
   </aside>
 
@@ -50,8 +73,7 @@
         <thead>
           <tr>
             <th>ID</th>
-            <th>ID Usuario</th>
-            <th>Tipo</th>
+            <th>Usuario</th>
             <th>Acción</th>
             <th>Fecha/Hora</th>
           </tr>
@@ -62,30 +84,36 @@
   </main>
 
   <!-- Modal edición -->
-  <div id="modalEditar" class="modal">
-    <div class="modal-content">
-      <h3>Editar Usuario</h3>
-      <input type="hidden" id="editarId">
-      <label for="editarDni">DNI</label>
-      <input type="text" id="editarDni">
-      <label for="editarNombre">Nombre</label>
-      <input type="text" id="editarNombre">
-      <label for="editarTipo">Estado</label><!--Tipo-->
-      <select id="editarTipo">
-        <option value="Admin">Admin</option>
-        <option value="Usuario">Usuario</option>
-      </select>
-      <label for="editarArea">Área</label>
-      <input type="text" id="editarArea">
-      <div style="display:flex; justify-content:space-between;">
-        <button onclick="guardarEdicion()" class="btn-edit">Guardar</button>
-        <button onclick="cerrarModal()" class="btn-delete">Cancelar</button>
-      </div>
+<div id="modalEditar" class="modal">
+  <div class="modal-content">
+    <h3>Editar Usuario</h3>
+    <input type="hidden" id="editarId">
+
+    <label for="editarDni">DNI</label>
+    <input type="text" id="editarDni">
+
+    <label for="editarNombre">Nombre</label>
+    <input type="text" id="editarNombre">
+
+    <label for="editarTipo">Estado</label>
+    <select id="editarTipo">
+      <option value="Activo">Activo</option>
+      <option value="Inactivo">Inactivo</option>
+    </select>
+
+    <label for="editarArea">Área</label>
+    <input type="text" id="editarArea">
+
+    <div style="display:flex; justify-content:space-between;">
+      <button onclick="guardarEdicion()" class="btn-edit">Guardar</button>
+      <button onclick="cerrarModal()" class="btn-delete">Cancelar</button>
     </div>
   </div>
+</div>
 
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="js/admin-users.js"></script>
 </body>
 </html>
+
