Agrego placeholder Gestion de proveedores

--- a/supervisor.html
+++ b/supervisor.html
@@ -250,6 +250,7 @@ tr:hover {
     <h2>Supervisor</h2>
     <button onclick="mostrarSeccion('ordenProduccion')">Creación OP</button>
     <button onclick="mostrarSeccion('seguimientoOP'); cargarOP()">Seguimiento OP</button>
+    <button onclick="mostrarSeccion('Gestión de Proveedores')">Gestión de Proveedores</button>
   </aside>
 
   <main class="main-content">
