--- a/ventas2.html
+++ b/ventas2.html
@@ -244,7 +244,7 @@
     const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
   </script>
   <script src="js/normalizarDireccion.js"></script>
-  <script src="js/ventas.js"></script>
+  <script src="js/ventas2.js"></script>
 </body>
 </html>
 
