--- a/supervisor.html
+++ b/supervisor.html
@@ -1,70 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Panel de Supervisor - Local</title>
-<link rel="stylesheet" href="css/ventas.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Panel de Supervisor - Local</title>
+  <link rel="stylesheet" href="css/ventas.css">
 </head>
+
 <body>
-<div class="dashboard">
-  <aside class="sidebar">
-    <h2>Supervisor</h2>
-    <button onclick="mostrarSeccion('ordenProduccion')">Creación OP</button>
-    <button onclick="mostrarSeccion('seguimientoOP'); cargarOP()">Seguimiento OP</button>
-    <button onclick="mostrarSeccion('Gestión de Proveedores')">Gestión de Proveedores</button>
-  </aside>
+  <div class="dashboard">
+    <aside class="sidebar">
+      <h2>Supervisor</h2>
+      <button onclick="mostrarSeccion('ordenProduccion')">Creación OP</button>
+      <button onclick="mostrarSeccion('seguimientoOP'); cargarOP()">Seguimiento OP</button>
+      <button onclick="mostrarSeccion('Gestión de Proveedores')">Gestión de Proveedores</button>
+    </aside>
 
-  <main class="main-content">
-    <h1>Panel de Supervisor</h1>
+    <main class="main-content">
+      <h1>Panel de Supervisor</h1>
 
-    <!-- CREACIÓN OP -->
-    <div id="ordenProduccion" class="seccion" style="display:none;">
-      <h2>Creación de Orden de Producción</h2>
-      <form id="opForm">
-        <div class="form-group">
-          <label for="opNumero">Número de OP:</label>
-          <input type="text" id="opNumero" readonly required>
-        </div>
-        <div class="form-group">
-          <label>Productos:</label>
-          <div id="productosContainer"></div>
-        </div>
-        <button type="submit" class="btn-submit">Crear OP</button>
-        <button type="button" onclick="cancelarOP()" class="btn-eliminar">Cancelar</button>
-      </form>
-    </div>
+      <!-- CREACIÓN OP -->
+      <div id="ordenProduccion" class="seccion" style="display:none;">
+        <h2>Creación de Orden de Producción</h2>
+        <form id="opForm">
+          <div class="form-group">
+            <label for="opNumero">Número de OP:</label>
+            <input type="text" id="opNumero" readonly required>
+          </div>
+          <div class="form-group">
+            <label>Productos:</label>
+            <div id="productosContainer"></div>
+          </div>
 
-    <!-- SEGUIMIENTO OP -->
-    <div id="seguimientoOP" class="seccion" style="display:none;">
-      <h2>Seguimiento de Órdenes de Producción</h2>
-      <div class="table-wrapper">
-        <table>
-          <thead>
-            <tr>
-              <th>Numero de OP</th>
-              <th>Orden</th>
-              <th>Estado</th>
-              <th>Fecha Emisión</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody id="tablaOP"></tbody>
-        </table>
+
+          <div class="form-group">
+            <h3>Detalle de materiales necesarios</h3>
+            <table id="tablaMateriales" border="1" style="width:100%; border-collapse: collapse; margin-top:10px;">
+              <thead>
+                <tr>
+                  <th>Material</th>
+                  <th>Cantidad Total</th>
+                  <th>Unidad</th>
+                  <th>Condición de stock</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td colspan="3" style="text-align:center;">Sin datos aún</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <button type="submit" class="btn-submit">Crear OP</button>
+          <button type="button" onclick="cancelarOP()" class="btn-eliminar">Cancelar</button>
+        </form>
       </div>
-    </div>
-  </main>
-</div>
-
-<!-- Modal Ver Orden -->
-<div class="modal" id="modalOrden" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba(0,0,0,0.7); justify-content:center; align-items:center;">
-  <div class="modal-content" style="background-color:#1e1e1e; padding:20px; border-radius:10px; width:90%; max-width:500px; position:relative;">
-    <span class="close-modal" onclick="cerrarModal()" style="position:absolute; top:10px; right:15px; font-size:24px; cursor:pointer; color:#fff;">&times;</span>
-    <h2>Detalle de Orden</h2>
-    <div id="detalleOrden"></div>
+      <!-- SEGUIMIENTO OP -->
+      <div id="seguimientoOP" class="seccion" style="display:none;">
+        <h2>Seguimiento de Órdenes de Producción</h2>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>Numero de OP</th>
+                <th>Orden</th>
+                <th>Estado</th>
+                <th>Fecha Emisión</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody id="tablaOP"></tbody>
+          </table>
+        </div>
+      </div>
+    </main>
   </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script src="js/supervisor.js"></script>
+
+  <!-- Modal Ver Orden -->
+  <div class="modal" id="modalOrden"
+    style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba(0,0,0,0.7); justify-content:center; align-items:center;">
+    <div class="modal-content"
+      style="background-color:#1e1e1e; padding:20px; border-radius:10px; width:90%; max-width:500px; position:relative;">
+      <span class="close-modal" onclick="cerrarModal()"
+        style="position:absolute; top:10px; right:15px; font-size:24px; cursor:pointer; color:#fff;">&times;</span>
+      <h2>Detalle de Orden</h2>
+      <div id="detalleOrden"></div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="js/supervisor.js"></script>
 </body>
+
 </html>
